Fixed variable block nesting alignment

--- a/splash/splash/static/css/splash-blocks.css
+++ b/splash/splash/static/css/splash-blocks.css
@@ -103,6 +103,7 @@
 
 .block-arg-wrapper {
 	display: inline-block;
+	vertical-align: middle;
 }
 
 .block-arg {
